# netsec-lab-in-a-box

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Makefile  README.md  mkdocs.yml  results.json  ruff.toml
.github/workflows/: ci.yml
compose/: docker-compose.full.yml  docker-compose.lite.yml
dashboards/saved_objects/: lab_seed.ndjson
docker/notebooks/: Dockerfile
docker/suricata/: Dockerfile  suricata.yaml
docker/vector/: Dockerfile  vector.toml
docker/zeek/: Dockerfile
docs/: index.md
docs/labs/: beacon.md  tls13.md
grader/: README.md  pyproject.toml
grader/labgrader/: checks.py  cli.py  io.py
labs/01_beacon/: README.md  answer_schema.json  answers.sample.yml  notebook.ipynb  rubric.yml
labs/01_beacon/expected/: summary.json
labs/02_tls13_fingerprints/: README.md  answer_schema.json  answers.sample.yml  notebook.ipynb  rubric.yml
labs/02_tls13_fingerprints/expected/: summary.json
labs/03_dns_exfil/: README.md  answer_schema.json  answers.sample.yml  notebook.ipynb  rubric.yml
labs/03_dns_exfil/expected/: summary.json
scripts/: dashboards_import.sh  generate_tiny_pcap.py  make_beacon_pcap.py  make_lab03_dns.pcap.py  make_tls13_pcap.py  requirements.txt  verify_checksums.sh
