[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labgrader"
version = "0.0.1"
description = "Autograder CLI for NetSec Lab-in-a-Box (stub)"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.20.0"]
authors = [{ name = "Your Name" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache-2.0" }

[project.scripts]
labgrade = "labgrader.cli:main"
